--- a/WebApplication1/Views/GarbageMaterials/Create.cshtml
+++ b/WebApplication1/Views/GarbageMaterials/Create.cshtml
@@ -14,11 +14,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="IdGarbage" class="control-label"></label>
-                <select asp-for="IdGarbage" class="form-control" asp-items="ViewBag.IdGarbages"></select>
+                <select asp-for="IdGarbage" class="form-control" asp-items="ViewBag.IdGarbage"></select>
             </div>
             <div class="form-group">
                 <label asp-for="IdMaterial" class="control-label"></label>
-                <select asp-for="IdMaterial" class="form-control" asp-items="ViewBag.IdMaterials"></select>
+                <select asp-for="IdMaterial" class="form-control" asp-items="ViewBag.IdMaterial"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Створити" class="btn btn-success" />
