--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -1,18 +1,46 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model WebApplication1.Models.User
+@{
+    ViewData["Title"] = "Лабораторна робота з ІСтаТП 2020. Бібліотека";
 }
+<link href="~/lib/bootstrap/dist/css/bootstrap_minty.min.css" rel="stylesheet" />
 
-    <div class="jumbotron">
-        <h1 class="display-3">Hello, world!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <p class="lead">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-        </p>
+
+
+<div class="jumbotron" style="text-align:center">
+    <h1 class="display-3">Привіт, любий друже!</h1>
+    <p></p>
+    <p class="lead">Давай разом берегти нашу природу!</p>
+    <div class="card" style="background-position:center">
+        <div class="card-body">
+            <h6 class="card-subtitle mb-2 text-muted">Якщо ти вперше на сайті, то просимо зареєструватися, або увійти в свій аккаунт:</h6>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <p class="card-text">Ви увійшли як:</p>
+                <p class="card-text">@User.Identity.Name</p>
+                <a asp-controller="Users" asp-action="ChangePassword" asp-route-Name="@User.Identity.Name">Змінити пароль</a>
+
+                <form method="post" asp-controller="Account" asp-action="Logout">
+                    <input type="submit" value="Вихід" class="btn btn-success"/>
+                </form>
+            }
+            else
+            {
+                    <a class="card-link nav-link active" style="font-size:large" asp-controller="Account" asp-action="Login">Вхід</a>
+                    <a class="card-link nav-link active" style="font-size:large" asp-controller="Account" asp-action="Register">Реєстація</a>
+                   }
+            </div>
     </div>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <hr class="my-4">
+    <img src="~/css/DSC_2017.jpg" />
+    <p></p>
+
+    <p class="lead">
+        <a class="btn btn-primary btn-lg" href="https://github.com/WithWings889/Lab1ISTP" target="_blank" role="button">Go to GitHub</a>
+    </p>
 </div>
+
+
+
+
+
