--- a/WebApplication1/Views/Materials/Create.cshtml
+++ b/WebApplication1/Views/Materials/Create.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="IdGarbageType" class="control-label"></label>
-                <select asp-for="IdGarbageType" class="form-control" asp-items="ViewBag.IdGarbageTypes"></select>
+                <select asp-for="IdGarbageType" class="form-control" asp-items="ViewBag.IdGarbageType"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Info" class="control-label"></label>
