--- a/WebApplication1/Views/Materials/Edit.cshtml
+++ b/WebApplication1/Views/Materials/Edit.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="IdGarbageType" class="control-label"></label>
-                <select asp-for="IdGarbageType" class="form-control" asp-items="ViewBag.IdGarbageTypes"></select>
+                <select asp-for="IdGarbageType" class="form-control" asp-items="ViewBag.IdGarbageType"></select>
                 <span asp-validation-for="IdGarbageType" class="text-danger"></span>
             </div>
             <div class="form-group">
