--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿<!DOCTYPE html>
+@using Microsoft.AspNetCore.Identity
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -18,9 +19,9 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                
+
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                   
+
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Про нас</a>
@@ -37,6 +38,20 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Factories" asp-action="Index">Фабрики</a>
                         </li>
+                        @if(User.Identity.IsAuthenticated)
+                        {
+                            @if ( ((ClaimsIdentity)User.Identity).Claims.Where(c => c.Type == ClaimTypes.Role).Select(c => c.Value).Contains("admin"))
+                        {
+                           
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Акаунти</a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" asp-area="" asp-controller="Roles" asp-action="UserList" >Користувачі</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Roles" asp-action="Index">Наявні ролі</a>
+                                </div>
+                            </li>
+                        }
+                        }
                     </ul>
                 </div>
             </div>
