--- a/WebApplication1/Views/_ViewImports.cshtml
+++ b/WebApplication1/Views/_ViewImports.cshtml
@@ -1,3 +1,9 @@
 ﻿@using WebApplication1
 @using WebApplication1.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
+@using System.Security.Claims;
+<link href="~/css/MyStyle.css" rel="stylesheet" />
+<link href="~/lib/bootstrap/dist/css/bootstrap_minty.min.css" rel="stylesheet" />
